# adda-cli

./: .gitignore  README.md  pyproject.toml  specs.html
adda/: cli.py  config.py  history.py  ollama.py
convo/: cli.py  config.py  history.py  ollama.py  prompt.py
tests/: test_cli.py  test_config.py  test_history.py  test_ollama.py  test_prompt.py
