[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convo"
version = "0.1.0"
description = "A CLI tool that suggests Linux commands using a local Ollama LLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "typer>=0.12.0",          # CLI framework
    "rich>=13.0.0",            # pretty terminal output
    "requests>=2.31.0",        # HTTP calls to Ollama REST API
    "pydantic>=2.0.0",         # config and response validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",             # linting + formatting
]

[project.scripts]
convo = "convo.cli:app"        # `convo` command maps to cli.py -> app

[tool.hatch.build.targets.wheel]
packages = ["convo"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]       # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
testpaths = ["tests"]